# cookiecutter-pypi

./: NOTICE  POETRY.md  README.md  cookiecutter.json
{{ cookiecutter.project_slug }}/: .coveragerc  .gitignore  .mypy.ini  .pylintrc  .python-version  .readthedocs.yaml  .readthedocs.yml  Changelog  DEVELOPER.md  NOTICE  PyPI.md  README.md  SECURITY.md  pyproject.toml
{{ cookiecutter.project_slug }}/.github/workflows/: test-suite.yml
{{ cookiecutter.project_slug }}/.run/commands/: checktabs.sh
{{ cookiecutter.project_slug }}/.run/tasks/: suite.sh
{{ cookiecutter.project_slug }}/docs/: conf.py  index.rst
{{ cookiecutter.project_slug }}/src/tests/{{ cookiecutter.package }}/: test_util.py
{{ cookiecutter.project_slug }}/src/{{ cookiecutter.package }}/: util.py
{{ cookiecutter.project_slug }}/tests/: test_util.py
